Completed login and signup of user.Also used usecontext to move the props

--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ DB_USERNAME = ritikgaur
 DB_PASSWORD = ritikgaur
 
 
-MONGO_URI = 'mongodb+srv://ritikgaur:ritikgaur@cluster0.bksfhdh.mongodb.net/'
+MONGO_URI = 'mongodb+srv://ritikgaur:ritikgaur@cluster0.hpaxgaj.mongodb.net/'
