Completed the payment integration

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,8 @@
-DB_USERNAME = ritikgaur
-DB_PASSWORD = ritikgaur
+
 
 
 MONGO_URI = 'mongodb+srv://ritikgaur:ritikgaur@cluster0.hpaxgaj.mongodb.net/'
+ 
+KEY_ID="rzp_test_tOlH7086z8snqF"
+
+KEY_SECRET="FoWuYlsC8M5O0dz12V7XYE6Z"
